# hybrid-secrets-messaging

./: .gitignore  Cargo.toml  Makefile  README.md  REPORT.md
.github/workflows/: c-ci.yml  codeql.yml  lint.yml  rust-ci.yml
client/: Cargo.toml
client/src/: channel.rs  clients.rs  crypto.rs  lib.rs  main.rs  message.rs  user.rs
plan/: Plan.md
server/: main.c
spoofer/: Cargo.toml
spoofer/src/: spoofer.rs
