[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json    = "1.0.149"
aes-gcm       = "0.10.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
x25519-dalek  = { version = "2.0.1", features = ["static_secrets"] }
